# django

./: .gitignore  migrate_from_mongo_to_postgres.py  pyproject.toml  settings.ini
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: admin.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_quotes_tags.py  0003_authors_user_quotes_user_tags_user_and_more.py
quotes/quotesapp/static/quotesapp/: style.css
quotes/quotesapp/templates/quotesapp/: base.html  get_authors.html  get_tags.html  quotes.html  quotes_by_tag.html
quotes/quotesapp/templatetags/: extract_tags.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: login.html  signup.html
