[tool.poetry]
name = "my_django"
version = "0.1.0"
description = ""
authors = ["IrinaShushkevych <iraolijnyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
psycopg2-binary = "^2.9.5"
configparser = "^5.3.0"
pymongo = "^4.3.3"
SQLAlchemy = "^2.0.0"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
